--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -18,6 +18,11 @@ body {
 	padding: 0em;
 }
 
+div.clearing
+{
+	clear	: both;
+}
+
 /************************ START - Page Header - START *************************/
 div#header {
 	width: 100%;
@@ -1441,3 +1446,49 @@ div.error {
 	border: .1em solid #d30;
 }
 /************* END - Stuff that I haven't categorized yet - END ***************/
+
+/******************************* CUSTOM CONTROLS ******************************/
+
+/** Tab/Tab Group Control Styling */
+
+div.tab-group div.page
+{
+	border				: none;
+	border-top			: 1px solid #000;
+	padding				: 0.5em;
+	background-color	: #f5f5f5;
+}
+
+div.tab-group div.tab-row
+{
+	
+}
+
+div.tab-group div.tab
+{
+	float							: left;
+	position						: relative;
+	top								: 1px;
+	margin-left						: 0.25em;
+	border							: 1px solid #000;
+	background-color				: #ddd;
+	padding							: 0.25em;
+	-moz-border-radius				: 0.5em 0.5em 0 0;
+	-webkit-border-top-left-radius	: 0.5em;
+	-webkit-border-top-right-radius	: 0.5em;
+}
+
+div.tab-group div.tab:hover
+{
+	background-color				: #fff;
+	cursor							: pointer;
+}
+
+div.tab-group div.tab.selected
+{
+	background-color	: #f5f5f5;
+	border-bottom		: 1px solid #f5f5f5;
+	font-weight			: bold;
+	cursor				: default;
+}
+/******************************************************************************/
