--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1459,9 +1459,19 @@ div.tab-group div.page
 	background-color	: #f5f5f5;
 }
 
+div.tab-group.embedded div.page
+{
+	border				: 1px solid #000;
+}
+
 div.tab-group div.tab-row
 {
 	background-color	: #888;
+}
+
+div.tab-group.embedded div.tab-row
+{
+	background-color	: #inherit;
 }
 
 div.tab-group div.tab
