Started to replace Employee Popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1451,7 +1451,7 @@ div.error {
 
 /** Tab/Tab Group Control Styling */
 
-div.tab-group div.page
+div.tab-group div.tab-page
 {
 	border				: none;
 	border-top			: 1px solid #000;
