--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1464,6 +1464,7 @@ div.tab-group div.tab-page
 	padding				: 0.5em;
 	background-color	: #f5f5f5;
 	position			: absolute;
+	width				: 100%;
 }
 
 div.tab-group.embedded div.page
