--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1469,6 +1469,8 @@ div.tab-group div.tab-page
 	padding				: 0.5em;
 	background-color	: #f5f5f5;
 	position			: absolute;
+	top					: 0px;
+	left				: 0px;
 	width				: 100%;
 }
 
