Started to replace Employee Popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1462,6 +1462,11 @@ div.tab-group
 	position	: relative;
 }
 
+div.tab-group div.tab-page-container
+{
+	position	: relative;
+}
+
 div.tab-group div.tab-page
 {
 	border				: none;
