Started to replace Employee Popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1465,6 +1465,7 @@ div.tab-group
 div.tab-group div.tab-page-container
 {
 	position	: relative;
+	height		: auto;
 }
 
 div.tab-group div.tab-page
