Started to replace Employee Popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1507,6 +1507,7 @@ div.tab-group div.tab
 	-moz-border-radius				: 0.5em 0.5em 0 0;
 	-webkit-border-top-left-radius	: 0.5em;
 	-webkit-border-top-right-radius	: 0.5em;
+	margin-bottom					: -1px;
 }
 
 div.tab-group div.tab img.icon
