DateChooser constructor now accepts Dom elements or IDs as the first parameter

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1559,6 +1559,11 @@ table.input tbody tr td select
 	width			: 98%;
 }
 
+table.input tbody tr td input[type="text"].date-formatted
+{
+	width			: 80%;
+}
+
 table.input tbody tr td input[type="checkbox"]
 {
 	margin-right	: 0.25em;
