Crazy ElementGroup-like stuff

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1582,6 +1582,7 @@ table.input tbody tr th
 	text-align			: right;
 	padding-right		: 0.5em;
 	width				: 10em;
+	vertical-align		: top;
 }
 
 table.input tbody tr td
@@ -1589,6 +1590,7 @@ table.input tbody tr td
 	background-color	: #ddd;
 	color				: #333;
 	padding-left		: 0.5em;
+	vertical-align		: top;
 }
 
 table.input tbody tr td .hide
