work on new employee popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1661,6 +1661,9 @@ div.select-list
 	background-color	: #fff;
 	border				: 1px solid #000;
 	overflow-y			: scroll;
+	
+	/* Default Height */
+	height				: 10em;
 }
 
 table.select-list
