work on new employee popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1685,6 +1685,7 @@ table.select-list tr:hover td
 table.select-list tr td.icon
 {
 	width	: 0.1em;
+	cursor	: pointer;
 }
 
 div.select-list-group
