work on new employee popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1743,7 +1743,7 @@ table.tree-grid tr td.icon
 	width			: 0.1em;
 }
 
-table.tree-grid tr td.tree img.indent
+table.tree-grid tr td.tree img
 {
 	width			: 16px;
 	min-width		: 16px;
