work on new employee popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1776,6 +1776,11 @@ table.tree-grid tr td.tree img.clickable
 	cursor	: pointer;
 }
 
+table.tree-grid tr td.row-select
+{
+	width	: 0.1em;
+}
+
 table.tree-grid tr td.row-select input[type="checkbox"]
 {
 	display	: none;
