work on new employee popup

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1769,6 +1769,8 @@ div.tree-grid
 	
 	/* Default Height */
 	height				: 15em;
+	
+	position			: relative;
 }
 
 table.tree-grid
@@ -1867,6 +1869,10 @@ div.tree-grid div.loading
 	background-color	: rgba(150, 150, 150, 0.5);
 	height				: 100%;
 	width				: 100%;
+	
+	position			: absolute;
+	top					: 0px;
+	left				: 0px;
 }
 
 div.tree-grid div.loading div
