work on Datepicker

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1922,7 +1922,7 @@ div.reflex-datepicker div.content div.clear
 	clear	: both;
 }
 
-dib.reflex-datepicker div.content div.month
+div.reflex-datepicker div.content div.month
 {
 	border	: 1px solid #333;
 	float	: left;
