--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1935,7 +1935,17 @@ div.reflex-datepicker div.content div.month td.day
 
 div.reflex-datepicker div.content div.month td.day.selectable:hover
 {
-	color	: red;
+	color		: red;
+	cursor		: pointer;
+	font-size	: 0.8em;
+	
+	min-width	: 2em;
+	max-width	: 2em;
+	width		: 2em;
+	
+	min-height	: 2em;
+	max-height	: 2em;
+	height		: 2em;
 }
 
 /* Day Mutator Classes */
