work on Datepicker

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1929,9 +1929,17 @@ div.reflex-datepicker div.content div.month
 	float	: left;
 }
 
+div.reflex-datepicker div.content div.month caption
+{
+	font-size	: 1.2em;
+	font-weight	: bold;
+}
+
 div.reflex-datepicker div.content div.month td.day
 {
 	border	: 1px solid #6899EF;
+	
+	padding-right	: 0.25em;
 	
 	text-align		: right;
 	vertical-align	: middle;
