--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1913,6 +1913,25 @@ div.reflex-datepicker div.header
 	
 }
 
+div.reflex-datepicker div.footer
+{
+	
+}
+
+div.reflex-datepicker div.footer div.time
+{
+	margin-left		: auto;
+	margin-right	: auto;
+}
+
+div.reflex-datepicker div.footer div.time span
+{
+	font-weight	: bold;
+	
+	margin-left		: 0.25em;
+	margin-right	: 0.25em;
+}
+
 div.reflex-datepicker div.content
 {
 	
