work on Datepicker

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1952,6 +1952,11 @@ div.reflex-datepicker div.content div.month caption
 {
 	font-size	: 1.2em;
 	font-weight	: bold;
+	
+	background-image	: url('../admin/img/template/wave.png');
+	background-color	: #D7812A;
+	
+	height	: 2.5em;
 }
 
 div.reflex-datepicker div.content div.month caption span
