work on Datepicker

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -1959,6 +1959,29 @@ div.reflex-datepicker div.content div.month caption
 	height	: 2.5em;
 	
 	vertical-align	: middle;
+	
+	border-top		: 0.1em solid #DFA66F;
+	border-bottom	: 0.1em solid #8F5823;
+}
+
+div.reflex-datepicker div.content div:first-child div.month caption
+{
+	border-left		: 0.1em solid #DFA66F;
+	
+	-moz-border-radius-topleft			: 1.25em;
+	-moz-border-radius-bottomleft		: 1.25em;
+	-webkit-border-top-left-radius		: 1.25em;
+	-webkit-border-bottom-left-radius	: 1.25em;
+}
+
+div.reflex-datepicker div.content div:last-child div.month caption
+{
+	border-right	: 0.1em solid #8F5823;
+	
+	-moz-border-radius-topright			: 1.25em;
+	-moz-border-radius-bottomright		: 1.25em;
+	-webkit-border-top-right-radius		: 1.25em;
+	-webkit-border-bottom-right-radius	: 1.25em;
 }
 
 div.reflex-datepicker div.content div.month caption span
